[package]
name = "faucet-drain"
version = "0.1.0"
edition = "2021"
authors = ["Josh Bowden <josbow@gmail.com>"]
description = "Back-pressured MPMC queue that can be drained after signaling completion"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jaxrtech/faucet-drain"
documentation = "https://docs.rs/faucet-drain/"
readme = "README.md"
keywords = ["async", "queue", "backpressure", "faucet"]
categories = ["concurrency"]

[dependencies]
tokio = { version = "1", default-features = false, features = ["macros"] }
tokio-util = "0.7"
deadqueue = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
ctrlc = "3"
